ansible/files/manifests/model_get/service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    skupper.io/address: model-get-proxy
    skupper.io/port: '8000'
    skupper.io/proxy: tcp
  name: model-get
  namespace: cps
  labels:
    app: model-get
spec:
  type: NodePort
  ports:
    - name: 8000-tcp
      protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 31000
  selector:
    app: model-get
